[package]
name = "metrical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
once_cell = "1.19.0"
rocksdb = "0.22.0"
serde = { version = "1.0.201", features = ["serde_derive", "derive"] }
serde_json = "1.0.117"
