[package]
name = "metrical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storeful = { path = "../storeful" }
anyhow = "1.0.83"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
once_cell = "1.19.0"
serde = { version = "1.0.201", features = ["serde_derive", "derive"] }
serde_json = "1.0.117"
tide = "0.16.0"
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8.5"
bincode = "1.3.3"
