[package]
name = "storeful"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
rocksdb = { version = "0.22.0", features = ["serde"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
