[package]
name = "storeful"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sled = "0.34.7"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
