[package]
name = "traceful"
version = "0.1.0"
edition = "2021"

[dependencies]
storeful = { path = "../storeful" }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
ulid = { version = "1.1.3", features = ["serde"] }
typed-builder = "0.20.0"
